# DominoEngine

./: CMakeLists.txt  README.md  doc.md
ecs/: registry.h
ecs/components/: camera.h  entitylink.h  info.h  mesh.h  script.h  shader.h  transform.h
ecs/scripts/: Behaviour.h  CameraController.lua  test.lua
ecs/systems/: CameraSystem.cpp  CameraSystem.h  InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  TransformSystem.cpp  TransformSystem.h
include/: InputState.h  LuaBindings.h  MeshLoader.h  ShaderObject.h  engine.h  settings.h  utils.h  vertex.h
resources/: Plane.glb
shaders/: objectShader.fs  objectShader.vs
src/: LuaBindings.cpp  MeshLoader.cpp  ShaderObject.cpp  engine.cpp  main.cpp  utils.cpp
